[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "loopsim"
version = "0.3.3"
description = "A Fast Computational Tool for the Simulation and Analysis of Chromatin Loops"
authors = ["Gideon Shaked <gshaked@umich.edu>"]
maintainers = ["Gideon Shaked <gshaked@umich.edu>"]
readme = "README.md"
homepage = "https://github.com/CutaneousBioinf/Hi-C"
repository = "https://github.com/CutaneousBioinf/Hi-C"
classifiers = ["Environment :: Console",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Natural Language :: English"]

packages = [{include = "loopsim"}]

[tool.poetry.dependencies]
python = ">=3.8"
click = "~8.1.3"
detect-delimiter = "~0.1.1"
numpy = "~1.24.4"
pandas = "~2.0.2"
scipy = "~1.9.3"
seaborn = "~0.12.2"

[tool.poetry.scripts]
loopsim = "loopsim.cli:cli"

[tool.poetry.dev-dependencies]
pre-commit = "*"

[tool.isort]
profile = "black"

[tool.black]
line-length = 130
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
