[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "loopsim"
version = "0.4.0"
description = "Loopsim: Enrichment Analysis of Chromosome Conformation Capture Data with a Simulated Background Distribution"
authors = ["Gideon Shaked <gshaked@umich.edu>"]
maintainers = ["Gideon Shaked <gshaked@umich.edu>"]
repository = "https://github.com/CutaneousBioinf/loopsim"
classifiers = ["Environment :: Console",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.8",
        "Natural Language :: English"]
license = "MIT"

packages = [{include = "loopsim"}]

[tool.poetry.dependencies]
python = ">=3.8"
click = "~8.1.3"
detect-delimiter = "~0.1.1"
numpy = "~1.24.4"
pandas = "~2.0.2"
scipy = "~1.9.3"
seaborn = "~0.12.2"

[tool.poetry.scripts]
loopsim = "loopsim.cli:cli"

[tool.poetry.dev-dependencies]
pre-commit = "*"

[tool.isort]
profile = "black"

[tool.black]
line-length = 130
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
